# csv_convert

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: input.csv  output.json  output.toml  output.yaml
src/: app.rs  main.rs  ui.rs  utils.rs
