[package]
name = "csv_convert"
version = "0.1.0"
edition = "2024"
authors = ["gushiii <zrjie001@gmail.com>"]
description = "一个基于 Ratatui 的 CSV 转换工具"

[dependencies]
# TUI 核心框架
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# UI 组件
ratatui-explorer = "0.2.1"  # 文件浏览器
tui-input = { version = "0.10" }        # 文本输入框

# 数据处理与序列化
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# 实用工具
anyhow = "1.0"            # 简化的错误处理
nerd-font-symbols = "0.1"  # 图标支持（需配合 Nerd Font 使用）
devicons = "0.6.12"
dirs = "6.0.0"

[profile.release]
# 发布版本优化设置
strip = true              # 自动移除调试符号，显著减小二进制体积
opt-level = "z"           # 优化二进制文件大小 (若追求极致速度可改为 "3")
lto = true                # 启用链接时优化 (Link Time Optimization)
codegen-units = 1         # 降低并行度以换取更高的优化程度
panic = "abort"           # 发生 panic 时直接终止，进一步减小体积

[patch.crates-io]
# 如果需要针对特定平台进行微调，可以在此处添加补丁

